2010-06-06  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* parse_aprs.c, dprsgw.c:
	    Rudimentary GPSxyz -> APRS symbol mapping for DPRS,
	    with GPSxyz overlay character where possible.
	    Also IDENT TEXT, if any.

	* debian/aprx.init:
	    The "restart" command fails to work quite often.
	    The reason being "set -e"...

	* aprx.h, igate.c, dprsgw.c, ttyreader.c, ax25.c:
	    igate_to_aprsis(... , STRICTAX25)  -- new flag
	    to control source specific information about
	    TNC2 format address formats.

	* parse_aprs.c:
	    Remove unnecessary double precission floating point math.
	    Use of 'float' is quite enough.

	* debian/control:
	    Change package name a bit

	* dprsgw.c:
	    Data collection code fixes

	* telemetry.c:
	    Send first telemetry at 20.0 minutes after start.
	    This is related to defaulting to EMBEDDED operation mode.

	* configure.in, aprx.h, erlang.c:
	    Change defaults so that System is always "--with-embedded",
	    and requires explicit "--with-erlangstorage" to compile with
	    a filesystem based backing storage codes.

2010-06-04  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.h, dprsgw.c:
	    Couple steps onwards with DPRS Rx-IGate.

2010-06-01  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.c:
	    Set software tocall to 'APRX1H'.

	* interface.c:
	    Found a memory leak on AX.25 type packet receiver. Oops!
	    Ax.25 packets that were rejected by <digipeater> <source>'s
	    filters were just leaked, not disposed.

	* historydb.c:
	    Allocate cell arenas in 128 kB blocks.

	* digipeater.c:
	    Valgrind complained about uninitialized variables.
	    Default zero is not good enough...

2010-05-30  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.h, digipeater.c:
	    Use 'float' for ratelimit variables.  Permitting as low
	    rate definitions as 'once per 10 minutes.

	* dprsgw.c:
	    XOR checksums of "GPS" mode packets.  No Rx-iGate of them yet.
